# AnchorPoint

./: .dockerignore  CODEBASE_INDEX.md  CONTRIBUTING.md  Cargo.toml  IMPLEMENTATION_NOTES.md  PR_DESCRIPTIONS.md  PR_DESCRIPTIONS_ISSUE_406.md  PR_DESCRIPTIONS_ISSUE_420.md  PR_DESCRIPTIONS_ISSUE_422.md  PR_DESCRIPTIONS_ISSUE_431.md  PR_ISSUE_349.md  PULL_REQUEST.md  README.md  SEP40_ISSUES_SUMMARY.md  docker-compose.yml  implementation.md  original_lib.rs  output.txt  package-lock.json  pr_body.md  pr_body2.md  robust_merge_log.txt
.github/workflows/: backend.yml  migration-integrity.yml  rust.yml  terraform-kms.yml
backend/: .env.example  .eslintrc.json  Dockerfile  README.md  demo-e2e.js  jest.config.js  package.json  run-e2e.js  tsconfig.json
backend/docs/: BULLMQ_WORKER_SETUP.md  DISASTER_RECOVERY_DB_RESTORE.md  KEY_MANAGEMENT.md  resilience-patterns.md
backend/perf/: sep10-processor.js  sep10.yml
backend/prisma/: schema.prisma
backend/prisma/prisma/: dev.db
backend/scripts/: README.md  bootstrap-db.sh  check-migrations.js  migration-integrity-checker.test.ts  validate-migration-env.js  validate-migration-env.test.js  verify-db-restore.js  verify-migrations.ts
backend/src/: index.test.ts  index.ts
backend/src/__tests__/: auth.controller.client-domain.test.ts
backend/src/config/: env.ts  queue.test.ts  queue.ts
backend/src/lib/: email.service.test.ts  email.service.ts  key-management.service.test.ts  key-management.service.ts  key-management.types.ts  prisma.ts  smtp.service.test.ts  smtp.service.ts
backend/src/resilience/: breaker-registry.ts  circuit-breaker.factory.ts  horizon.proxy.ts  index.ts  redis.proxy.ts  telemetry.ts  third-party.proxy.ts
backend/src/services/: admin-email.service.ts  admin-password-reset.service.ts  advanced-cache.service.test.ts  alert-email.service.test.ts  (+31 more)
dashboard/: .dockerignore  Dockerfile  MOBILE_QA.md  cypress.config.ts  eslint.config.js  nginx.conf  package.json  tailwind.config.js
dashboard/.storybook/: main.ts  preview.ts
dashboard/src/: App.tsx  index.css  main.tsx  types.ts
dashboard/test-results/: .last-run.json
docs/: TESTNET_DEPLOYMENT_ARCHITECTURE.md  openapi.json  postman-collection.json
scripts/: deploy-soroban-testnet.sh  security-audit.sh  security_audit.sh
src/amm/: Cargo.toml  lib.rs
src/auth/: rbac.rs
src/batch/: lib.rs  test.rs
src/bridge/: Cargo.toml  errors.txt  errors2.txt
src/circuit_breaker/: Cargo.toml  lib.rs
src/escrow_multisig/: lib.rs
src/escrow_timelock/: lib.rs
src/event_hub/: Cargo.toml  README.md  lib.rs
src/flash_loan/: Cargo.toml  lib.rs  tests.rs  verification.rs
src/governance/: lib.rs
src/kyc/: Cargo.toml  lib.rs
src/liquidation/: Cargo.toml
src/oracle_consumer/: lib.rs
src/oracle_medianizer/: lib.rs
src/proxy/: lib.rs
src/random/: lib.rs
src/security_registry/: Cargo.toml  lib.rs
src/staking/: lib.rs
src/token/: Cargo.toml  lib.rs
src/upgradeable/: lib.rs
src/utils/: events.rs
src/vesting/: lib.rs
(+144 files in other folders)
