[workspace]
members = [
    "src/amm",
    "src/auth",
    "src/batch",
    "src/bridge",
    "src/circuit_breaker",
    "src/escrow_multisig",
    "src/escrow_timelock",
    "src/event_hub",
    "src/flash_loan",
    "src/governance",
    "src/indexing",
    "src/kyc",
    "src/liquidation",
    "src/oracle_consumer",
    "src/oracle_medianizer",
    "src/random",
    "src/security_registry",
    "src/staking",
    "src/token",
    "src/upgradeable",
    "src/utils",
    "src/vesting",
    "src/proxy",
    "src/yield_farming",
    "src/benchmarks",
]
resolver = "2"

[profile.release]
opt-level = "z"
overflow-checks = false
debug = 0
strip = true
debug-assertions = false
panic = "abort"
codegen-units = 1
lto = "fat"
