[package]
name = "anchorpoint-amm"
version = "0.1.0"
edition = "2021"
description = "Simple X*Y=K constant product pool implementation"

[dependencies]
soroban-sdk = "22.0.0"

[lib]
name = "anchorpoint_amm"
path = "lib.rs"
crate-type = ["cdylib", "rlib"]
doctest = false

[dev-dependencies]
soroban-sdk = { version = "22.0.0", features = ["testutils"] }
