[package]
name = "event-hub"
version = "0.0.0"
edition = "2021"
publish = false

[lib]
path = "lib.rs"
crate-type = ["rlib", "cdylib"]

[dependencies]
soroban-sdk = "22.0.0"
utils = { package = "anchorpoint-utils", path = "../utils" }

[dev-dependencies]
soroban-sdk = { version = "22.0.0", features = ["testutils"] }
utils = { package = "anchorpoint-utils", path = "../utils" }

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
