[package]
name = "event-hub"
version = "0.0.0"
edition = "2021"
publish = false

[lib]
path = "lib.rs"
crate-type = ["rlib", "cdylib"]

[dependencies]
soroban-sdk = "26.0.1"
anchorpointutils = { package = "anchorpoint-utils", path = "../utils" }

[dev-dependencies]
soroban-sdk = { version = "26.0.1", features = ["testutils"] }
anchorpointutils = { package = "anchorpoint-utils", path = "../utils" }

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
