[package]
name = "flash-loan-provider"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
crate-type = ["cdylib"]
path = "lib.rs"
doctest = false

[dependencies]
soroban-sdk = "22.0.0"

[dev-dependencies]
soroban-sdk = { version = "22.0.0", features = ["testutils"] }

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(kani)'] }
