[package]
name = "anchorpoint-security-registry"
version = "0.1.0"
edition = "2021"
description = "Global security registry for AnchorPoint"

[dependencies]
soroban-sdk = "26.0.1"

[lib]
name = "anchorpoint_security_registry"
path = "lib.rs"
crate-type = ["cdylib"]
doctest = false

[dev-dependencies]
soroban-sdk = { version = "26.0.1", features = ["testutils"] }
